--- a/News/Base.lproj/Main.storyboard
+++ b/News/Base.lproj/Main.storyboard
@@ -356,6 +356,11 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="oSZ-ey-LOG" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <customObject id="xfc-kS-IGw" customClass="SettingsAssembly" customModule="News" customModuleProvider="target">
+                    <connections>
+                        <outlet property="viewController" destination="owJ-jr-KeQ" id="G4c-Lx-xWS"/>
+                    </connections>
+                </customObject>
             </objects>
             <point key="canvasLocation" x="2744.9275362318845" y="59.598214285714285"/>
         </scene>
